--- a/forum/templates/forum/home.html
+++ b/forum/templates/forum/home.html
@@ -1,30 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>StudyDeck Forum</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="bg-light">
+{% extends 'forum/base.html' %}
 
-<nav class="navbar navbar-dark bg-dark mb-4">
-    <div class="container">
-        <a class="navbar-brand" href="{% url 'home' %}">StudyDeck</a>
-        <div>
-            {% if user.is_authenticated %}
-                <span class="text-white me-3">Hello, {{ user.username }}</span>
-                <a href="{% url 'account_logout' %}" class="btn btn-outline-light btn-sm">Logout</a>
-            {% else %}
-                <a href="{% url 'google_login' %}" class="btn btn-primary btn-sm">Login with BITS Mail</a>
-            {% endif %}
-        </div>
-    </div>
-</nav>
-
-<div class="container">
+{% block content %}
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h2>Latest Discussions</h2>
-        <a href="#" class="btn btn-success">+ New Thread</a>
+        <a href="{% url 'create_thread' %}" class="btn btn-success">+ New Thread</a>
     </div>
 
     <div class="list-group">
@@ -41,7 +20,4 @@
             <div class="alert alert-info">No threads found. Be the first to post!</div>
         {% endfor %}
     </div>
-</div>
-
-</body>
-</html>
+{% endblock %}
