--- a/forum/templates/forum/thread_detail.html
+++ b/forum/templates/forum/thread_detail.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ thread.title }}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="bg-light">
+{% extends 'forum/base.html' %}
 
-<div class="container mt-5">
+{% block content %}
     <a href="{% url 'home' %}" class="text-decoration-none">&larr; Back to Forum</a>
     
     <div class="card mt-3">
@@ -47,7 +40,4 @@
     {% else %}
         <div class="alert alert-warning mt-4">Please login to reply.</div>
     {% endif %}
-</div>
-
-</body>
-</html>
+{% endblock %}
