--- a/forum/templates/forum/base.html
+++ b/forum/templates/forum/base.html
@@ -26,9 +26,9 @@
                                  style="width: 32px; height: 32px; object-fit: cover;">
                         {% endif %}
                         
-                        <span class="text-white me-3">
-                            Hello, {{ user.get_full_name|default:user.username }}
-                        </span>
+                        <a href="{% url 'user_profile' user.username %}" class="text-white text-decoration-none me-3 fw-bold">
+                            {{ user.get_full_name|default:user.username }}
+                        </a>
                     </li>
                     <li class="nav-item">
                         <a href="{% url 'account_logout' %}" class="btn btn-outline-light btn-sm">Logout</a>
