--- a/forum/templates/forum/home.html
+++ b/forum/templates/forum/home.html
@@ -7,11 +7,14 @@
         <div class="card">
             <div class="card-header bg-primary text-white">Categories</div>
             <div class="list-group list-group-flush">
-                <a href="{% url 'home' %}" class="list-group-item list-group-item-action {% if not current_category %}active{% endif %}">
+                <a href="{% url 'home' %}" 
+                class="list-group-item list-group-item-action {% if not current_category %}active{% endif %}">
                     All Threads
                 </a>
+                
                 {% for cat in categories %}
-                    <a href="?category={{ cat.id }}" class="list-group-item list-group-item-action {% if current_category == cat.id %}active{% endif %}">
+                    <a href="{% url 'home' %}?category={{ cat.id }}{% if request.GET.sort %}&sort={{ request.GET.sort }}{% endif %}" 
+                    class="list-group-item list-group-item-action {% if current_category == cat.id %}active{% endif %}">
                         {{ cat.name }}
                     </a>
                 {% endfor %}
