--- a/forum/templates/forum/home.html
+++ b/forum/templates/forum/home.html
@@ -2,6 +2,12 @@
 {% load forum_extras %}
 
 {% block content %}
+
+<div class="alert alert-danger text-center">
+    <strong>DEBUG INFO:</strong><br>
+    Categories passed to template: <strong>{{ categories|length }}</strong><br>
+    First Category Name: <strong>{{ categories.0.name }}</strong>
+</div>
 <div class="row">
     <div class="col-md-3 mb-4"> 
         <div class="card shadow-sm">
