--- a/forum/templates/forum/home.html
+++ b/forum/templates/forum/home.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="row">
     <div class="col-md-3 mb-4"> 
-        <div class="card shadow-sm">
+        <div class="card shadow-sm border-0">
             <div class="card-header bg-primary text-white">
                 <h5 class="mb-0 text-nowrap">Categories</h5>
             </div>
@@ -49,7 +49,7 @@
 
         <div class="list-group">
             {% for thread in threads %}
-                <div class="list-group-item p-3 position-relative list-group-item-action">
+                <div class="list-group-item p-3 position-relative mb-2 border rounded shadow-sm">
                     <div class="d-flex w-100 justify-content-between">
                         <h5 class="mb-1">
                             <a href="{% url 'thread_detail' thread.slug %}" class="text-decoration-none text-dark fw-bold stretched-link">
